wordpress/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: wordpress
  namespace: wordpress
  labels:
    app: blog
spec:
  type: ClusterIP
  selector:
    app: blog
  ports:
    - port: 80
      targetPort: 80
